--- a/gym website/templates/about_us.html
+++ b/gym website/templates/about_us.html
@@ -22,12 +22,33 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+
+<div class="info">
+        <h1>FITNESS CLUB INFO</h1>
+      </div>
+      <div class="para">
+        <p>We have been extremely lucky to be provided with such a vast amount of space at the club, that we have specifically zoned spaces, so you can easily target the areas of your body you feel you need to work & improve on.</p>
+        <p>
+            We pride ourselves in being a high quality health & fitness centre. Fully air conditioned, we offer a gym for everyone, that suits all levels of fitness in an atmosphere that’s friendly & relaxed, offering the best quality equipment & technology in the largest gym in South Dorset.</p>
+
+        <p>We have fully trained fitness instructors to guide & help you “Achieve your target!”</p>
+        </div>
       </div>
     </div>
   </div>
+<!--CSS Styling-->
+  <style>
+  .info{
+    text-align: center;
+    font-family: 'Bree Serif', serif;
+  
+  }
+  .para{
+    font-family: 'Exo', sans-serif;
+  }
+
+  
+  </style>
 
  
 {% endblock %}
