--- a/gym website/templates/contact.html
+++ b/gym website/templates/contact.html
@@ -23,9 +23,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-          <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-          <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-          <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
+         
+        <!--Contact form-->
           <form name="sentMessage" id="contactForm" action="/contact" method='POST' novalidate>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
@@ -61,6 +60,31 @@
               <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
             </div>
           </form>
+          <!--Lower Content-->
+
+          <div class="find">
+            <h1>How to find us?</h1>
+            <p>If you have any questions, just fill in the contact form, and we will answer you shortly. If you are living nearby, come visit LawExpert at one of our comfortable offices. </p>
+            <h1>OFFICE</h1>
+            <p> dawraka sec17, near metro station, MG09 99HT.<br> Telephone: +917903350593<br> E-mail: noor.shanu.90@gmail.com </p>
+               <p> st-97, okhala vihar,near metro kalandi kunj. <br>
+                 Telephone: +917788994563 <br> E-mail: noor.alam.6190@gmail.com 
+                 </p>
+
+
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
       </div>
     </div>
