--- a/gym website/templates/index.html
+++ b/gym website/templates/index.html
@@ -1,84 +1,170 @@
 {% extends "layout.html" %}
 {% block body %}
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename ='img/home-bg.jpg')}}')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
-            <h1>{{params['gym_name']}}</h1>
-            <span class="subheading">{{params['tag_line']}}</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('{{ url_for('static', filename ='img/home1-bg.jpg')}}')">
+  <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Man must explore, and this is exploration at its greatest
-            </h2>
-            <h3 class="post-subtitle">
-              Problems look mighty small from 150 miles up
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-            </h2>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 18, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Science has not yet mastered prophecy
-            </h2>
-            <h3 class="post-subtitle">
-              We predict too much for the next year and yet far too little for the next ten.
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on August 24, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Failure is not an option
-            </h2>
-            <h3 class="post-subtitle">
-              Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on July 8, 2019</p>
-        </div>
-        <hr>
-        <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+        <div class="site-heading">
+          <h1>{{params['gym_name']}}</h1>
+          <span class="subheading">{{params['tag_line']}}</span>
         </div>
       </div>
     </div>
   </div>
-  {% endblock %}
- 
+</header>
+
+<!-- Main Content -->
+<div class="jumbotron">
+<div class="main">
+  <div class="gym1">
+  
+    <h2 class="gym">welcome to our gym.</h2>
+    <div class="w3-container w3-center w3-animate-zoom text"><h2>Fitness Club  </h2></div>
+    <p class="lol">There are many variations of passages of Lorem Ipsum available,
+      but the majority have
+      suffered alteration in some form, by injected humour, or
+      randomised words which don’t look even slightly believable.</p>
+
+  </div>
+  <div class="wrapper">
+    <a class="btn" href="/join">Join Us</a></div>
+
+</div>
+<div class="jumbotron">
+  <h2>Why Us?</h2>
+  <p>Because we provide you best services.</p>
+  <div class="container ">
+    <img src="{{url_for('static', filename='img/serc1.jpg')}}" alt="services" width="1000" height="300">
+    <div class="center"><a class="links" href="/service">Check Out Our Services Here</a></div>
+
+  </div>
+
+</div>
+<div class="jumbotron">
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="{{url_for('static', filename='img/card_1.jpg')}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Trainer 1</h5>
+      <p class="card-text">Here we can type the instructer details </p>
+    </div>
+    
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="{{url_for('static', filename='img/card_4.jpg')}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Here we can type the instructer details </p>
+    </div>
+    
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="{{url_for('static', filename='img/card_3.jpg')}}"  alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Here we can type the instructer details </p>
+    </div>
+  
+  </div>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--css Styling-->
+
+<style>
+  div.gym1 {
+    text-align: center;
+  }
+
+  .wrapper {
+    text-align: center;
+  }
+
+
+  a.btn {
+
+    background-color: #4CAF50;
+    /* Green */
+    border-radius: 8px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+  }
+
+  a.btn:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  h2 {
+    text-transform: uppercase;
+  }
+
+
+
+  .container {
+    position: relative;
+  }
+
+  .center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    opacity: 0.8;
+  }
+
+  a.links:link,
+  a:visited {
+    background-color: green;
+    color: black;
+    border: 2px solid green;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  a.links:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    background-color: green;
+    color: white;
+  }
+
+  
+
+
+</style>
+{% endblock %}
