--- a/gym website/templates/join.html
+++ b/gym website/templates/join.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
+<!--header-->
 
 
 <header class="masthead" style="background-image: url('{{ url_for('static', filename ='img/boot3.jpg')}}')">
@@ -18,9 +19,96 @@
 </header>
 
 
-<div class="containor">
-  <h1>coming soon</h1>
+<!--Main Content-->
+
+<div class="container">
+    {% include "includes/_message.html" %}
+  <!--Registration form-->
+  <form name="signUp" id="signupinfo" action="/join" method='POST' novalidate>
+      <div class="form-inline row">
+          <label for="username" class="col-sm-2 col-form-label">User Name</label>
+          <input type="text" class="form-control" name="username" id="username" placeholder="UserName" required data-validation-required-message="please enter your username">
+         
+        </div>
+    <div class="form-inline row"  align="center" >
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Email Id</label>
+      <input type="email" class="form-control" name="emailid" id="emailid" placeholder="Email" required  data-validation-required-message="please enter your email id">
+      
+    </div>
+    <div class="form-inline row"  align="center">
+      <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+       <input type="password" class="form-control"  name="password" id="Password" placeholder="Password" required  data-validation-required-message="please enter your password">
+      
+    </div>
+    <div class="form-inline row"  align="center">
+      <label for="inputPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
+       <input type="password" class="form-control"  name="confirm" id="confirm" placeholder="Confirm Password" required  data-validation-required-message="please enter your password">
+      
+    </div>
+    <div class="form-inline row"  align="center">
+        <label for="dateofbirth" class="col-sm-2 col-form-label">Date Of Birth</label>
+        <input type="date" class="form-control"name="dateOfb" class="dateOfb" id="dateOfb" placeholder="dd/mm/yy" required>
+       
+      </div>
+      
+        <!-- Radio buttons -->
+        <fieldset class="form-group">
+            <div class="row">
+              <label class="col-form-label col-sm-2 pt-0"  id="genderq">Gendar</label>
+              <div class="col-sm-2">
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gender" id="gender" value="male" checked>
+                  <label class="form-check-label" for="gender">
+                    male
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gender" id="gender" value="female">
+                  <label class="form-check-label" for="gender">
+                    female
+                  </label>
+                </div>
+                <div class="form-check disabled">
+                  <input class="form-check-input" type="radio" name="gender" id="gender" value="others" >
+                  <label class="form-check-label" for="gender">
+                    others
+                  </label>
+                </div>
+              </div>
+            </div>
+          </fieldset>
+      
+      <div class="btn-1"  align="center">
+   
+      <button type="submit" class="button" id="join">Join Us</button>    
+    </div>     
+    </form>
 </div>
+
+
+
+
+
+
+
+
+
+
+<!--css styling-->
+<style>
+
+  body{
+    background: linear-gradient(to top, #66ffcc 0%, #ffffff 100%);
+  }
+  .button{
+    background-color: #4CAF50;
+  }
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  
+}
+
+</style>
 
 
 
