--- a/gym website/templates/layout.html
+++ b/gym website/templates/layout.html
@@ -12,6 +12,9 @@
 
   <!-- Bootstrap core CSS -->
   <link href="{{ url_for('static', filename = 'vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 
   <!-- Custom fonts for this template -->
   <link href="{{ url_for('static', filename ='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
@@ -20,12 +23,18 @@
 
   <!-- Custom styles for this template -->
   <link href="{{ url_for('static', filename ='css/clean-blog.min.css')}}" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename ='css/style.css')}}">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Bree+Serif|Calistoga&display=swap" rel="stylesheet">
+
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
+ 
+
+
+
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="/">{{params['gym_name']}}</a>
@@ -39,22 +48,32 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/fitness">Fitness Tips</a>
+          </li>
+    
+          <li class="nav-item">
+            <a class="nav-link" href="/join">Join Us</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/service">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/join">Join Us</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
           </li>
+          <li class="nav-item"><a class="nav-link" href="/login"> Login</a></li>
         </ul>
       </div>
     </div>
   </nav>
+  
+     <!-- {% include "includes/_message.html" %}-->
+   
+  <!--main content-->
   {% block body %}
+ 
 
 
   {% endblock %}
@@ -94,6 +113,7 @@
               </a>
             </li>
           </ul>
+          <p class="copyright text" style="font-display: bold;">Do follow us on </p>
           <p class="copyright text-muted">Copyright &copy; Fitness Club 2019</p>
         </div>
       </div>
@@ -108,5 +128,7 @@
   <script src="{{ url_for('static', filename ='js/clean-blog.min.js')}}"></script>
 
 </body>
+<style>
+</style>
 
 </html>
